<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        // Desa calon penerima, disalin dari pendaftaran (atau diisi saat tambah manual),
        // agar penilaian & perankingan SAW dapat dikelompokkan per desa.
        Schema::table('pkh_alternatif', function (Blueprint $table) {
            $table->string('desa', 60)->nullable()->after('user_id');
        });
    }

    public function down(): void
    {
        Schema::table('pkh_alternatif', function (Blueprint $table) {
            $table->dropColumn('desa');
        });
    }
};
